Fri May 15 05:11:42 GMT 2015  Olly Betts <olly@survex.com>

	* tests/soaktest/Makefile.mk: Use -no-fast-install instead of
	  -no-install for linking soaktest on platforms where libtool issues
	  a warning for -no-install, like we already do for all the other test
	  programs.

Fri May 15 05:11:03 GMT 2015  Olly Betts <olly@survex.com>

	* examples/simpleexpand.cc,examples/simpleindex.cc,
	  examples/simplesearch.cc: '#include <config.h>' in the examples, as
	  when compiling with xlC on AIX, _LARGE_FILES gets defined by
	  AC_SYS_LARGEFILE to enable large file support, and defining this
	  changes the ABI of std::string, so it also needs to be defined when
	  compiling code using Xapian.

Fri May 15 04:57:27 GMT 2015  Olly Betts <olly@survex.com>

	* common/io_utils.cc,common/io_utils.h: Fix build on platforms without
	  O_CLOEXEC, broken by backporting change not to use fds < 3 for
	  database tables.

Thu May 14 14:47:43 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.21.

Thu May 14 06:57:16 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 14 06:33:05 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Actually use $(NO_UNDEFINED).

Thu May 14 06:30:33 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Only pass -no-undefined when linking the library if
	  it's actually required for the current platform.  Sun C++ doesn't
	  link the C++ runtime libraries to shared objects, so the build
	  fails with -no-undefined.

Thu May 14 06:29:10 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Add workaround for odd <cmath> issue with Sun C++.

Thu May 14 06:24:18 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING: libtool 2.4.6 is now used for snapshots and releases.

Thu May 14 05:17:24 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_cursor.cc,backends/flint/flint_cursor.cc:
	  Correct delete to delete [].

Thu May 14 05:14:36 GMT 2015  Olly Betts <olly@survex.com>
