@@ -26,7 +26,7 @@ perftest_perftest_SOURCES = perftest/perftest.cc $(collated_perftest_sources) \
  perftest/freemem.cc perftest/freemem.h \
  perftest/runprocess.cc perftest/runprocess.h \
  $(testharness_sources)
-perftest_perftest_LDFLAGS = @NO_INSTALL@ $(ldflags)
+perftest_perftest_LDFLAGS = $(NO_INSTALL) $(ldflags)
 perftest_perftest_LDADD = ../libgetopt.la ../$(libxapian_la)
 
 if MAINTAINER_MODE
